--- a/cloudflare.html
+++ b/cloudflare.html
@@ -210,7 +210,7 @@ html.dark {
          focus-visible:ring-ring">
                     <option value="index.html">腾讯云 EO 监控</option>
                     <option value="esa.html">阿里云 ESA 监控</option>
-                    <option value="cf.html" selected>Cloudflare 监控</option>
+                    <option value="cloudflare.html" selected>Cloudflare 监控</option>
                 </select>
             </div>
         </div>
