--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                         lg: "var(--radius)",
                         md: "calc(var(--radius) - 2px)",
                         sm: "calc(var(--radius) - 4px)",
-                    },
+                    }，
                 },
             },
         }
@@ -216,7 +216,7 @@
                 <!-- 假设 EO 对应的页面是 eo.html，ESA 对应的页面是 esa.html -->
                 <option value="" selected >腾讯云 EO 监控</option>
                 <option value="esa.html" >阿里云 ESA 监控</option>
-                <option value="cf.html">Cloudflare 监控</option>
+                <option value="cloudflare.html">Cloudflare 监控</option>
                 </select>
             </div>
         </div>
