--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                         lg: "var(--radius)",
                         md: "calc(var(--radius) - 2px)",
                         sm: "calc(var(--radius) - 4px)",
-                    }，
+                    },
                 },
             },
         }
@@ -215,8 +215,8 @@
             <select id="cdnSelector" onchange="if(this.value) window.location.href=this.value" class="h-9 w-[240px] rounded-md border border-border bg-background text-foreground px-3 py-1 text-sm shadow-sm transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring">
                 <!-- 假设 EO 对应的页面是 eo.html，ESA 对应的页面是 esa.html -->
                 <option value="" selected >腾讯云 EO 监控</option>
-                <option value="aliesa.html" >阿里云 ESA 监控</option>
-                <option value="cloudflare.html">Cloudflare 监控</option>
+                <option value="esa.html" >阿里云 ESA 监控</option>
+                <option value="cf.html">Cloudflare 监控</option>
                 </select>
             </div>
         </div>
