--- a/aliesa.html
+++ b/aliesa.html
@@ -5,6 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>阿里云ESA 监控大屏</title>
+	<script>
+        // 立即执行，检查本地存储或系统偏好
+        if (localStorage.theme === 'dark' || (!('theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
+            document.documentElement.classList.add('dark');
+        } else {
+            document.documentElement.classList.remove('dark');
+        }
+    </script>
     <!-- Tailwind CSS for Shadcn/UI style -->
     <script src="https://eo.cydiaa.com/?url=https://cdn.tailwindcss.com"></script>
     <script src="https://eo.cydiaa.com/?url=https://cdn.jsdelivr.net/npm/echarts@5.4.3/dist/echarts.min.js"></script>
@@ -120,6 +128,7 @@
             --sidebar-accent-foreground: 240 4.8% 95.9%;
             --sidebar-border: 240 3.7% 15.9%;
             --sidebar-ring: 217.2 91.2% 59.8%;
+			
             *, ::after, ::before {
                 border-color: hsl(var(--border));
             }
@@ -2861,15 +2870,7 @@ async function refreshData() {
             applyTheme(isDark ? 'light' : 'dark');
         }
 
-        // 初始化主题
-        (function initTheme() {
-            const saved = localStorage.getItem('theme');
-            if (saved) {
-                applyTheme(saved);
-            } else if (window.matchMedia('(prefers-color-scheme: dark)').matches) {
-                applyTheme('dark');
-            }
-        })();
+
 
         function rerenderChartsByTheme() {
           if (!lastResults) return;
@@ -2879,15 +2880,7 @@ async function refreshData() {
           updateRequestsSection(lastResults);
           updateTopAnalysisSection(lastResults);
 
-          // If originPull, bandwidth, performance, security had data, their update functions would be called here.
-          // For this specific esa.html, these sections are not active per metricsConfig.
-          /*
-          updateBandwidthSection(lastResults);
-          updateOriginPullSection(lastResults);
-          updatePerformanceSection(lastResults);
-          updateEdgeFunctionsSection(lastResults);
-          updateSecuritySection(lastResults);
-          */
+
         }
 
         // Start - Entrance
