--- a/index.html
+++ b/index.html
@@ -2768,19 +2768,28 @@
             const html = document.documentElement;
             const btn = document.getElementById('themeToggle');
 
+            // 定义 SVG 图标变量，添加 class="w-4 h-4 mr-2" 以便与文字对齐
+            // 太阳图标 (切换到日间模式)
+            const sunIcon = '<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-sun h-4 w-4"><circle cx="12" cy="12" r="4"></circle><path d="M12 2v2"></path><path d="M12 20v2"></path><path d="m4.93 4.93 1.41 1.41"></path><path d="m17.66 17.66 1.41 1.41"></path><path d="M2 12h2"></path><path d="M20 12h2"></path><path d="m6.34 17.66-1.41 1.41"></path><path d="m19.07 4.93-1.41 1.41"></path></svg>';
+            
+            
+            const moonIcon = '<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-moon h-4 w-4"><path d="M12 3a6 6 0 0 0 9 9 9 9 0 1 1-9-9Z"></path></svg>';
+
             if (theme === 'dark') {
                 html.classList.add('dark');
-                btn.innerText = '☀️ 日间模式';
+                // 夜间模式下：显示太阳图标，点击切换到日间模式
+                btn.innerHTML = `${sunIcon}`;
             } else {
                 html.classList.remove('dark');
-                btn.innerText = '🌙 夜间模式';
+                // 日间模式下：显示月亮图标，点击切换到夜间模式
+                btn.innerHTML = `${moonIcon}`;
             }
 
             localStorage.setItem('theme', theme);
 
-            // 刷新 ECharts 主题（重要）
+            // 刷新 ECharts 主题（或重绘图表以适应深色背景变化）
             setTimeout(() => {
-               rerenderChartsByTheme(); // ⭐ 只重绘样式
+               rerenderChartsByTheme();
             }, 50);
         }
 
