--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
                         </div>
                         <div class="p-6 pt-0">
                             <div class="text-2xl font-bold" id="kpi_cache_hit_rate">加载中...</div>
-                            <p class="text-xs text-muted-foreground mt-1">1 - (源站响应 / EdgeOne 响应)</p>
+                            <p class="text-xs text-muted-foreground mt-1">源站响应 / EdgeOne 响应</p>
                         </div>
                     </div>
                 </div>
